[package]
name = "mkserial"
version = "0.0.2"
authors = ["Mikael Voss <mvs@nyantec.com>"]
edition = "2021"

repository = "https://github.com/nyantec/mkserial"
description = "Serial number generator for X.509 certificates"
license = "CC0-1.0"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
