[package]
name = "mkserial"
version = "1.0.1"
authors = ["Mikael Voss <mvs@nyantec.com>"]
edition = "2021"

repository = "https://github.com/nyantec/mkserial"
description = "Serial number generator for X.509 certificates"
license = "CC0-1.0"

[dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

[profile.release]
lto = "thin"

[profile.test]
opt-level = 1
lto = "thin"
